[OLC2]Proyecto2_201603127/Analisis/Descendente/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> instrucciones
Rule 2     instrucciones -> instruccion instrucciones_p
Rule 3     instrucciones_p -> instruccion instrucciones_p
Rule 4     instrucciones_p -> <empty>
Rule 5     instruccion -> etiqueta_main
Rule 6     instruccion -> etiqueta_ID
Rule 7     instruccion -> asignacion
Rule 8     instruccion -> inst_goto
Rule 9     instruccion -> inst_if
Rule 10    instruccion -> inst_print
Rule 11    instruccion -> inst_exit
Rule 12    instruccion -> inst_unset
Rule 13    etiqueta_main -> MAIN DOSPUNTOS
Rule 14    etiqueta_ID -> ID DOSPUNTOS
Rule 15    asignacion -> variables IGUAL operaciones PUNTOCOMA
Rule 16    asignacion -> variables_array IGUAL operaciones PUNTOCOMA
Rule 17    inst_goto -> GOTO ID PUNTOCOMA
Rule 18    inst_if -> IF PARENTA operaciones PARENTC GOTO ID PUNTOCOMA
Rule 19    inst_print -> PRINT PARENTA variables PARENTC PUNTOCOMA
Rule 20    inst_print -> PRINT PARENTA val PARENTC PUNTOCOMA
Rule 21    inst_unset -> UNSET PARENTA variables PARENTC PUNTOCOMA
Rule 22    inst_exit -> EXIT PUNTOCOMA
Rule 23    operaciones -> val operaciones_p
Rule 24    operaciones_p -> MAS val
Rule 25    operaciones_p -> MENOS val
Rule 26    operaciones_p -> POR val
Rule 27    operaciones_p -> DIVICION val
Rule 28    operaciones_p -> RESIDUO val
Rule 29    operaciones_p -> AND1 val
Rule 30    operaciones_p -> OR1 val
Rule 31    operaciones_p -> XOR val
Rule 32    operaciones_p -> AND2 val
Rule 33    operaciones_p -> OR2 val
Rule 34    operaciones_p -> XOR2 val
Rule 35    operaciones_p -> SHIFTI val
Rule 36    operaciones_p -> SHIFTD val
Rule 37    operaciones_p -> IGUALIGUAL val
Rule 38    operaciones_p -> DIFERENTE val
Rule 39    operaciones_p -> MAYORIGUAL val
Rule 40    operaciones_p -> MENORIGUAL val
Rule 41    operaciones_p -> MAYOR val
Rule 42    operaciones_p -> MENOR val
Rule 43    operaciones -> MENOS val
Rule 44    operaciones -> EXCLAMA val
Rule 45    operaciones -> NOT val
Rule 46    operaciones -> ABS PARENTA val PARENTC
Rule 47    operaciones -> READ PARENTA PARENTC
Rule 48    operaciones -> ARRAY PARENTA PARENTC
Rule 49    operaciones -> val
Rule 50    val -> conversiones
Rule 51    val -> ENTERO
Rule 52    val -> DECIMAL
Rule 53    val -> CADENA
Rule 54    val -> variables
Rule 55    val -> variables_array
Rule 56    variables -> TEMPORALES
Rule 57    variables -> PARAMETROS
Rule 58    variables -> VALORES_DEVUELTOS
Rule 59    variables -> SIMULADO
Rule 60    variables -> PILA
Rule 61    variables -> PUNTERO_PILA
Rule 62    variables_array -> TEMPORALES indices
Rule 63    variables_array -> PARAMETROS indices
Rule 64    variables_array -> VALORES_DEVUELTOS indices
Rule 65    variables_array -> SIMULADO indices
Rule 66    variables_array -> PILA indices
Rule 67    variables_array -> PUNTERO_PILA indices
Rule 68    indices -> indice indices_P
Rule 69    indices_P -> indice indices_P
Rule 70    indices_P -> <empty>
Rule 71    indice -> CORCHEA val CORCHEC
Rule 72    conversiones -> PARENTA INT PARENTC val
Rule 73    conversiones -> PARENTA FLOAT PARENTC val
Rule 74    conversiones -> PARENTA CHAR PARENTC val

Terminals, with rules where they appear

ABS                  : 46
AND1                 : 29
AND2                 : 32
ARRAY                : 48
CADENA               : 53
CHAR                 : 74
CORCHEA              : 71
CORCHEC              : 71
DECIMAL              : 52
DIFERENTE            : 38
DIVICION             : 27
DOSPUNTOS            : 13 14
ENTERO               : 51
EXCLAMA              : 44
EXIT                 : 22
FLOAT                : 73
GOTO                 : 17 18
ID                   : 14 17 18
IF                   : 18
IGUAL                : 15 16
IGUALIGUAL           : 37
INT                  : 72
MAIN                 : 13
MAS                  : 24
MAYOR                : 41
MAYORIGUAL           : 39
MENOR                : 42
MENORIGUAL           : 40
MENOS                : 25 43
NOT                  : 45
OR1                  : 30
OR2                  : 33
PARAMETROS           : 57 63
PARENTA              : 18 19 20 21 46 47 48 72 73 74
PARENTC              : 18 19 20 21 46 47 48 72 73 74
PILA                 : 60 66
POR                  : 26
PRINT                : 19 20
PUNTERO_PILA         : 61 67
PUNTOCOMA            : 15 16 17 18 19 20 21 22
READ                 : 47
RESIDUO              : 28
SHIFTD               : 36
SHIFTI               : 35
SIMULADO             : 59 65
TEMPORALES           : 56 62
UNSET                : 21
VALORES_DEVUELTOS    : 58 64
XOR                  : 31
XOR2                 : 34
error                : 

Nonterminals, with rules where they appear

asignacion           : 7
conversiones         : 50
etiqueta_ID          : 6
etiqueta_main        : 5
indice               : 68 69
indices              : 62 63 64 65 66 67
indices_P            : 68 69
inicio               : 0
inst_exit            : 11
inst_goto            : 8
inst_if              : 9
inst_print           : 10
inst_unset           : 12
instruccion          : 2 3
instrucciones        : 1
instrucciones_p      : 2 3
operaciones          : 15 16 18
operaciones_p        : 23
val                  : 20 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 49 71 72 73 74
variables            : 15 19 21 54
variables_array      : 16 55

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . instrucciones
    (2) instrucciones -> . instruccion instrucciones_p
    (5) instruccion -> . etiqueta_main
    (6) instruccion -> . etiqueta_ID
    (7) instruccion -> . asignacion
    (8) instruccion -> . inst_goto
    (9) instruccion -> . inst_if
    (10) instruccion -> . inst_print
    (11) instruccion -> . inst_exit
    (12) instruccion -> . inst_unset
    (13) etiqueta_main -> . MAIN DOSPUNTOS
    (14) etiqueta_ID -> . ID DOSPUNTOS
    (15) asignacion -> . variables IGUAL operaciones PUNTOCOMA
    (16) asignacion -> . variables_array IGUAL operaciones PUNTOCOMA
    (17) inst_goto -> . GOTO ID PUNTOCOMA
    (18) inst_if -> . IF PARENTA operaciones PARENTC GOTO ID PUNTOCOMA
    (19) inst_print -> . PRINT PARENTA variables PARENTC PUNTOCOMA
    (20) inst_print -> . PRINT PARENTA val PARENTC PUNTOCOMA
    (22) inst_exit -> . EXIT PUNTOCOMA
    (21) inst_unset -> . UNSET PARENTA variables PARENTC PUNTOCOMA
    (56) variables -> . TEMPORALES
    (57) variables -> . PARAMETROS
    (58) variables -> . VALORES_DEVUELTOS
    (59) variables -> . SIMULADO
    (60) variables -> . PILA
    (61) variables -> . PUNTERO_PILA
    (62) variables_array -> . TEMPORALES indices
    (63) variables_array -> . PARAMETROS indices
    (64) variables_array -> . VALORES_DEVUELTOS indices
    (65) variables_array -> . SIMULADO indices
    (66) variables_array -> . PILA indices
    (67) variables_array -> . PUNTERO_PILA indices

    MAIN            shift and go to state 12
    ID              shift and go to state 13
    GOTO            shift and go to state 16
    IF              shift and go to state 17
    PRINT           shift and go to state 18
    EXIT            shift and go to state 19
    UNSET           shift and go to state 20
    TEMPORALES      shift and go to state 21
    PARAMETROS      shift and go to state 22
    VALORES_DEVUELTOS shift and go to state 23
    SIMULADO        shift and go to state 24
    PILA            shift and go to state 25
    PUNTERO_PILA    shift and go to state 26

    inicio                         shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    etiqueta_main                  shift and go to state 4
    etiqueta_ID                    shift and go to state 5
    asignacion                     shift and go to state 6
    inst_goto                      shift and go to state 7
    inst_if                        shift and go to state 8
    inst_print                     shift and go to state 9
    inst_exit                      shift and go to state 10
    inst_unset                     shift and go to state 11
    variables                      shift and go to state 14
    variables_array                shift and go to state 15

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> instrucciones .

    $end            reduce using rule 1 (inicio -> instrucciones .)


state 3

    (2) instrucciones -> instruccion . instrucciones_p
    (3) instrucciones_p -> . instruccion instrucciones_p
    (4) instrucciones_p -> .
    (5) instruccion -> . etiqueta_main
    (6) instruccion -> . etiqueta_ID
    (7) instruccion -> . asignacion
    (8) instruccion -> . inst_goto
    (9) instruccion -> . inst_if
    (10) instruccion -> . inst_print
    (11) instruccion -> . inst_exit
    (12) instruccion -> . inst_unset
    (13) etiqueta_main -> . MAIN DOSPUNTOS
    (14) etiqueta_ID -> . ID DOSPUNTOS
    (15) asignacion -> . variables IGUAL operaciones PUNTOCOMA
    (16) asignacion -> . variables_array IGUAL operaciones PUNTOCOMA
    (17) inst_goto -> . GOTO ID PUNTOCOMA
    (18) inst_if -> . IF PARENTA operaciones PARENTC GOTO ID PUNTOCOMA
    (19) inst_print -> . PRINT PARENTA variables PARENTC PUNTOCOMA
    (20) inst_print -> . PRINT PARENTA val PARENTC PUNTOCOMA
    (22) inst_exit -> . EXIT PUNTOCOMA
    (21) inst_unset -> . UNSET PARENTA variables PARENTC PUNTOCOMA
    (56) variables -> . TEMPORALES
    (57) variables -> . PARAMETROS
    (58) variables -> . VALORES_DEVUELTOS
    (59) variables -> . SIMULADO
    (60) variables -> . PILA
    (61) variables -> . PUNTERO_PILA
    (62) variables_array -> . TEMPORALES indices
    (63) variables_array -> . PARAMETROS indices
    (64) variables_array -> . VALORES_DEVUELTOS indices
    (65) variables_array -> . SIMULADO indices
    (66) variables_array -> . PILA indices
    (67) variables_array -> . PUNTERO_PILA indices

    $end            reduce using rule 4 (instrucciones_p -> .)
    MAIN            shift and go to state 12
    ID              shift and go to state 13
    GOTO            shift and go to state 16
    IF              shift and go to state 17
    PRINT           shift and go to state 18
    EXIT            shift and go to state 19
    UNSET           shift and go to state 20
    TEMPORALES      shift and go to state 21
    PARAMETROS      shift and go to state 22
    VALORES_DEVUELTOS shift and go to state 23
    SIMULADO        shift and go to state 24
    PILA            shift and go to state 25
    PUNTERO_PILA    shift and go to state 26

    instruccion                    shift and go to state 27
    instrucciones_p                shift and go to state 28
    etiqueta_main                  shift and go to state 4
    etiqueta_ID                    shift and go to state 5
    asignacion                     shift and go to state 6
    inst_goto                      shift and go to state 7
    inst_if                        shift and go to state 8
    inst_print                     shift and go to state 9
    inst_exit                      shift and go to state 10
    inst_unset                     shift and go to state 11
    variables                      shift and go to state 14
    variables_array                shift and go to state 15

state 4

    (5) instruccion -> etiqueta_main .

    MAIN            reduce using rule 5 (instruccion -> etiqueta_main .)
    ID              reduce using rule 5 (instruccion -> etiqueta_main .)
    GOTO            reduce using rule 5 (instruccion -> etiqueta_main .)
    IF              reduce using rule 5 (instruccion -> etiqueta_main .)
    PRINT           reduce using rule 5 (instruccion -> etiqueta_main .)
    EXIT            reduce using rule 5 (instruccion -> etiqueta_main .)
    UNSET           reduce using rule 5 (instruccion -> etiqueta_main .)
    TEMPORALES      reduce using rule 5 (instruccion -> etiqueta_main .)
    PARAMETROS      reduce using rule 5 (instruccion -> etiqueta_main .)
    VALORES_DEVUELTOS reduce using rule 5 (instruccion -> etiqueta_main .)
    SIMULADO        reduce using rule 5 (instruccion -> etiqueta_main .)
    PILA            reduce using rule 5 (instruccion -> etiqueta_main .)
    PUNTERO_PILA    reduce using rule 5 (instruccion -> etiqueta_main .)
    $end            reduce using rule 5 (instruccion -> etiqueta_main .)


state 5

    (6) instruccion -> etiqueta_ID .

    MAIN            reduce using rule 6 (instruccion -> etiqueta_ID .)
    ID              reduce using rule 6 (instruccion -> etiqueta_ID .)
    GOTO            reduce using rule 6 (instruccion -> etiqueta_ID .)
    IF              reduce using rule 6 (instruccion -> etiqueta_ID .)
    PRINT           reduce using rule 6 (instruccion -> etiqueta_ID .)
    EXIT            reduce using rule 6 (instruccion -> etiqueta_ID .)
    UNSET           reduce using rule 6 (instruccion -> etiqueta_ID .)
    TEMPORALES      reduce using rule 6 (instruccion -> etiqueta_ID .)
    PARAMETROS      reduce using rule 6 (instruccion -> etiqueta_ID .)
    VALORES_DEVUELTOS reduce using rule 6 (instruccion -> etiqueta_ID .)
    SIMULADO        reduce using rule 6 (instruccion -> etiqueta_ID .)
    PILA            reduce using rule 6 (instruccion -> etiqueta_ID .)
    PUNTERO_PILA    reduce using rule 6 (instruccion -> etiqueta_ID .)
    $end            reduce using rule 6 (instruccion -> etiqueta_ID .)


state 6

    (7) instruccion -> asignacion .

    MAIN            reduce using rule 7 (instruccion -> asignacion .)
    ID              reduce using rule 7 (instruccion -> asignacion .)
    GOTO            reduce using rule 7 (instruccion -> asignacion .)
    IF              reduce using rule 7 (instruccion -> asignacion .)
    PRINT           reduce using rule 7 (instruccion -> asignacion .)
    EXIT            reduce using rule 7 (instruccion -> asignacion .)
    UNSET           reduce using rule 7 (instruccion -> asignacion .)
    TEMPORALES      reduce using rule 7 (instruccion -> asignacion .)
    PARAMETROS      reduce using rule 7 (instruccion -> asignacion .)
    VALORES_DEVUELTOS reduce using rule 7 (instruccion -> asignacion .)
    SIMULADO        reduce using rule 7 (instruccion -> asignacion .)
    PILA            reduce using rule 7 (instruccion -> asignacion .)
    PUNTERO_PILA    reduce using rule 7 (instruccion -> asignacion .)
    $end            reduce using rule 7 (instruccion -> asignacion .)


state 7

    (8) instruccion -> inst_goto .

    MAIN            reduce using rule 8 (instruccion -> inst_goto .)
    ID              reduce using rule 8 (instruccion -> inst_goto .)
    GOTO            reduce using rule 8 (instruccion -> inst_goto .)
    IF              reduce using rule 8 (instruccion -> inst_goto .)
    PRINT           reduce using rule 8 (instruccion -> inst_goto .)
    EXIT            reduce using rule 8 (instruccion -> inst_goto .)
    UNSET           reduce using rule 8 (instruccion -> inst_goto .)
    TEMPORALES      reduce using rule 8 (instruccion -> inst_goto .)
    PARAMETROS      reduce using rule 8 (instruccion -> inst_goto .)
    VALORES_DEVUELTOS reduce using rule 8 (instruccion -> inst_goto .)
    SIMULADO        reduce using rule 8 (instruccion -> inst_goto .)
    PILA            reduce using rule 8 (instruccion -> inst_goto .)
    PUNTERO_PILA    reduce using rule 8 (instruccion -> inst_goto .)
    $end            reduce using rule 8 (instruccion -> inst_goto .)


state 8

    (9) instruccion -> inst_if .

    MAIN            reduce using rule 9 (instruccion -> inst_if .)
    ID              reduce using rule 9 (instruccion -> inst_if .)
    GOTO            reduce using rule 9 (instruccion -> inst_if .)
    IF              reduce using rule 9 (instruccion -> inst_if .)
    PRINT           reduce using rule 9 (instruccion -> inst_if .)
    EXIT            reduce using rule 9 (instruccion -> inst_if .)
    UNSET           reduce using rule 9 (instruccion -> inst_if .)
    TEMPORALES      reduce using rule 9 (instruccion -> inst_if .)
    PARAMETROS      reduce using rule 9 (instruccion -> inst_if .)
    VALORES_DEVUELTOS reduce using rule 9 (instruccion -> inst_if .)
    SIMULADO        reduce using rule 9 (instruccion -> inst_if .)
    PILA            reduce using rule 9 (instruccion -> inst_if .)
    PUNTERO_PILA    reduce using rule 9 (instruccion -> inst_if .)
    $end            reduce using rule 9 (instruccion -> inst_if .)


state 9

    (10) instruccion -> inst_print .

    MAIN            reduce using rule 10 (instruccion -> inst_print .)
    ID              reduce using rule 10 (instruccion -> inst_print .)
    GOTO            reduce using rule 10 (instruccion -> inst_print .)
    IF              reduce using rule 10 (instruccion -> inst_print .)
    PRINT           reduce using rule 10 (instruccion -> inst_print .)
    EXIT            reduce using rule 10 (instruccion -> inst_print .)
    UNSET           reduce using rule 10 (instruccion -> inst_print .)
    TEMPORALES      reduce using rule 10 (instruccion -> inst_print .)
    PARAMETROS      reduce using rule 10 (instruccion -> inst_print .)
    VALORES_DEVUELTOS reduce using rule 10 (instruccion -> inst_print .)
    SIMULADO        reduce using rule 10 (instruccion -> inst_print .)
    PILA            reduce using rule 10 (instruccion -> inst_print .)
    PUNTERO_PILA    reduce using rule 10 (instruccion -> inst_print .)
    $end            reduce using rule 10 (instruccion -> inst_print .)


state 10

    (11) instruccion -> inst_exit .

    MAIN            reduce using rule 11 (instruccion -> inst_exit .)
    ID              reduce using rule 11 (instruccion -> inst_exit .)
    GOTO            reduce using rule 11 (instruccion -> inst_exit .)
    IF              reduce using rule 11 (instruccion -> inst_exit .)
    PRINT           reduce using rule 11 (instruccion -> inst_exit .)
    EXIT            reduce using rule 11 (instruccion -> inst_exit .)
    UNSET           reduce using rule 11 (instruccion -> inst_exit .)
    TEMPORALES      reduce using rule 11 (instruccion -> inst_exit .)
    PARAMETROS      reduce using rule 11 (instruccion -> inst_exit .)
    VALORES_DEVUELTOS reduce using rule 11 (instruccion -> inst_exit .)
    SIMULADO        reduce using rule 11 (instruccion -> inst_exit .)
    PILA            reduce using rule 11 (instruccion -> inst_exit .)
    PUNTERO_PILA    reduce using rule 11 (instruccion -> inst_exit .)
    $end            reduce using rule 11 (instruccion -> inst_exit .)


state 11

    (12) instruccion -> inst_unset .

    MAIN            reduce using rule 12 (instruccion -> inst_unset .)
    ID              reduce using rule 12 (instruccion -> inst_unset .)
    GOTO            reduce using rule 12 (instruccion -> inst_unset .)
    IF              reduce using rule 12 (instruccion -> inst_unset .)
    PRINT           reduce using rule 12 (instruccion -> inst_unset .)
    EXIT            reduce using rule 12 (instruccion -> inst_unset .)
    UNSET           reduce using rule 12 (instruccion -> inst_unset .)
    TEMPORALES      reduce using rule 12 (instruccion -> inst_unset .)
    PARAMETROS      reduce using rule 12 (instruccion -> inst_unset .)
    VALORES_DEVUELTOS reduce using rule 12 (instruccion -> inst_unset .)
    SIMULADO        reduce using rule 12 (instruccion -> inst_unset .)
    PILA            reduce using rule 12 (instruccion -> inst_unset .)
    PUNTERO_PILA    reduce using rule 12 (instruccion -> inst_unset .)
    $end            reduce using rule 12 (instruccion -> inst_unset .)


state 12

    (13) etiqueta_main -> MAIN . DOSPUNTOS

    DOSPUNTOS       shift and go to state 29


state 13

    (14) etiqueta_ID -> ID . DOSPUNTOS

    DOSPUNTOS       shift and go to state 30


state 14

    (15) asignacion -> variables . IGUAL operaciones PUNTOCOMA

    IGUAL           shift and go to state 31


state 15

    (16) asignacion -> variables_array . IGUAL operaciones PUNTOCOMA

    IGUAL           shift and go to state 32


state 16

    (17) inst_goto -> GOTO . ID PUNTOCOMA

    ID              shift and go to state 33


state 17

    (18) inst_if -> IF . PARENTA operaciones PARENTC GOTO ID PUNTOCOMA

    PARENTA         shift and go to state 34


state 18

    (19) inst_print -> PRINT . PARENTA variables PARENTC PUNTOCOMA
    (20) inst_print -> PRINT . PARENTA val PARENTC PUNTOCOMA

    PARENTA         shift and go to state 35


state 19

    (22) inst_exit -> EXIT . PUNTOCOMA

    PUNTOCOMA       shift and go to state 36


state 20

    (21) inst_unset -> UNSET . PARENTA variables PARENTC PUNTOCOMA

    PARENTA         shift and go to state 37


state 21

    (56) variables -> TEMPORALES .
    (62) variables_array -> TEMPORALES . indices
    (68) indices -> . indice indices_P
    (71) indice -> . CORCHEA val CORCHEC

    IGUAL           reduce using rule 56 (variables -> TEMPORALES .)
    MAS             reduce using rule 56 (variables -> TEMPORALES .)
    MENOS           reduce using rule 56 (variables -> TEMPORALES .)
    POR             reduce using rule 56 (variables -> TEMPORALES .)
    DIVICION        reduce using rule 56 (variables -> TEMPORALES .)
    RESIDUO         reduce using rule 56 (variables -> TEMPORALES .)
    AND1            reduce using rule 56 (variables -> TEMPORALES .)
    OR1             reduce using rule 56 (variables -> TEMPORALES .)
    XOR             reduce using rule 56 (variables -> TEMPORALES .)
    AND2            reduce using rule 56 (variables -> TEMPORALES .)
    OR2             reduce using rule 56 (variables -> TEMPORALES .)
    XOR2            reduce using rule 56 (variables -> TEMPORALES .)
    SHIFTI          reduce using rule 56 (variables -> TEMPORALES .)
    SHIFTD          reduce using rule 56 (variables -> TEMPORALES .)
    IGUALIGUAL      reduce using rule 56 (variables -> TEMPORALES .)
    DIFERENTE       reduce using rule 56 (variables -> TEMPORALES .)
    MAYORIGUAL      reduce using rule 56 (variables -> TEMPORALES .)
    MENORIGUAL      reduce using rule 56 (variables -> TEMPORALES .)
    MAYOR           reduce using rule 56 (variables -> TEMPORALES .)
    MENOR           reduce using rule 56 (variables -> TEMPORALES .)
    PUNTOCOMA       reduce using rule 56 (variables -> TEMPORALES .)
    PARENTC         reduce using rule 56 (variables -> TEMPORALES .)
    CORCHEC         reduce using rule 56 (variables -> TEMPORALES .)
    CORCHEA         shift and go to state 40

    indices                        shift and go to state 38
    indice                         shift and go to state 39

state 22

    (57) variables -> PARAMETROS .
    (63) variables_array -> PARAMETROS . indices
    (68) indices -> . indice indices_P
    (71) indice -> . CORCHEA val CORCHEC

    IGUAL           reduce using rule 57 (variables -> PARAMETROS .)
    MAS             reduce using rule 57 (variables -> PARAMETROS .)
    MENOS           reduce using rule 57 (variables -> PARAMETROS .)
    POR             reduce using rule 57 (variables -> PARAMETROS .)
    DIVICION        reduce using rule 57 (variables -> PARAMETROS .)
    RESIDUO         reduce using rule 57 (variables -> PARAMETROS .)
    AND1            reduce using rule 57 (variables -> PARAMETROS .)
    OR1             reduce using rule 57 (variables -> PARAMETROS .)
    XOR             reduce using rule 57 (variables -> PARAMETROS .)
    AND2            reduce using rule 57 (variables -> PARAMETROS .)
    OR2             reduce using rule 57 (variables -> PARAMETROS .)
    XOR2            reduce using rule 57 (variables -> PARAMETROS .)
    SHIFTI          reduce using rule 57 (variables -> PARAMETROS .)
    SHIFTD          reduce using rule 57 (variables -> PARAMETROS .)
    IGUALIGUAL      reduce using rule 57 (variables -> PARAMETROS .)
    DIFERENTE       reduce using rule 57 (variables -> PARAMETROS .)
    MAYORIGUAL      reduce using rule 57 (variables -> PARAMETROS .)
    MENORIGUAL      reduce using rule 57 (variables -> PARAMETROS .)
    MAYOR           reduce using rule 57 (variables -> PARAMETROS .)
    MENOR           reduce using rule 57 (variables -> PARAMETROS .)
    PUNTOCOMA       reduce using rule 57 (variables -> PARAMETROS .)
    PARENTC         reduce using rule 57 (variables -> PARAMETROS .)
    CORCHEC         reduce using rule 57 (variables -> PARAMETROS .)
    CORCHEA         shift and go to state 40

    indices                        shift and go to state 41
    indice                         shift and go to state 39

state 23

    (58) variables -> VALORES_DEVUELTOS .
    (64) variables_array -> VALORES_DEVUELTOS . indices
    (68) indices -> . indice indices_P
    (71) indice -> . CORCHEA val CORCHEC

    IGUAL           reduce using rule 58 (variables -> VALORES_DEVUELTOS .)
    MAS             reduce using rule 58 (variables -> VALORES_DEVUELTOS .)
    MENOS           reduce using rule 58 (variables -> VALORES_DEVUELTOS .)
    POR             reduce using rule 58 (variables -> VALORES_DEVUELTOS .)
    DIVICION        reduce using rule 58 (variables -> VALORES_DEVUELTOS .)
    RESIDUO         reduce using rule 58 (variables -> VALORES_DEVUELTOS .)
    AND1            reduce using rule 58 (variables -> VALORES_DEVUELTOS .)
    OR1             reduce using rule 58 (variables -> VALORES_DEVUELTOS .)
    XOR             reduce using rule 58 (variables -> VALORES_DEVUELTOS .)
    AND2            reduce using rule 58 (variables -> VALORES_DEVUELTOS .)
    OR2             reduce using rule 58 (variables -> VALORES_DEVUELTOS .)
    XOR2            reduce using rule 58 (variables -> VALORES_DEVUELTOS .)
    SHIFTI          reduce using rule 58 (variables -> VALORES_DEVUELTOS .)
    SHIFTD          reduce using rule 58 (variables -> VALORES_DEVUELTOS .)
    IGUALIGUAL      reduce using rule 58 (variables -> VALORES_DEVUELTOS .)
    DIFERENTE       reduce using rule 58 (variables -> VALORES_DEVUELTOS .)
    MAYORIGUAL      reduce using rule 58 (variables -> VALORES_DEVUELTOS .)
    MENORIGUAL      reduce using rule 58 (variables -> VALORES_DEVUELTOS .)
    MAYOR           reduce using rule 58 (variables -> VALORES_DEVUELTOS .)
    MENOR           reduce using rule 58 (variables -> VALORES_DEVUELTOS .)
    PUNTOCOMA       reduce using rule 58 (variables -> VALORES_DEVUELTOS .)
    PARENTC         reduce using rule 58 (variables -> VALORES_DEVUELTOS .)
    CORCHEC         reduce using rule 58 (variables -> VALORES_DEVUELTOS .)
    CORCHEA         shift and go to state 40

    indices                        shift and go to state 42
    indice                         shift and go to state 39

state 24

    (59) variables -> SIMULADO .
    (65) variables_array -> SIMULADO . indices
    (68) indices -> . indice indices_P
    (71) indice -> . CORCHEA val CORCHEC

    IGUAL           reduce using rule 59 (variables -> SIMULADO .)
    MAS             reduce using rule 59 (variables -> SIMULADO .)
    MENOS           reduce using rule 59 (variables -> SIMULADO .)
    POR             reduce using rule 59 (variables -> SIMULADO .)
    DIVICION        reduce using rule 59 (variables -> SIMULADO .)
    RESIDUO         reduce using rule 59 (variables -> SIMULADO .)
    AND1            reduce using rule 59 (variables -> SIMULADO .)
    OR1             reduce using rule 59 (variables -> SIMULADO .)
    XOR             reduce using rule 59 (variables -> SIMULADO .)
    AND2            reduce using rule 59 (variables -> SIMULADO .)
    OR2             reduce using rule 59 (variables -> SIMULADO .)
    XOR2            reduce using rule 59 (variables -> SIMULADO .)
    SHIFTI          reduce using rule 59 (variables -> SIMULADO .)
    SHIFTD          reduce using rule 59 (variables -> SIMULADO .)
    IGUALIGUAL      reduce using rule 59 (variables -> SIMULADO .)
    DIFERENTE       reduce using rule 59 (variables -> SIMULADO .)
    MAYORIGUAL      reduce using rule 59 (variables -> SIMULADO .)
    MENORIGUAL      reduce using rule 59 (variables -> SIMULADO .)
    MAYOR           reduce using rule 59 (variables -> SIMULADO .)
    MENOR           reduce using rule 59 (variables -> SIMULADO .)
    PUNTOCOMA       reduce using rule 59 (variables -> SIMULADO .)
    PARENTC         reduce using rule 59 (variables -> SIMULADO .)
    CORCHEC         reduce using rule 59 (variables -> SIMULADO .)
    CORCHEA         shift and go to state 40

    indices                        shift and go to state 43
    indice                         shift and go to state 39

state 25

    (60) variables -> PILA .
    (66) variables_array -> PILA . indices
    (68) indices -> . indice indices_P
    (71) indice -> . CORCHEA val CORCHEC

    IGUAL           reduce using rule 60 (variables -> PILA .)
    MAS             reduce using rule 60 (variables -> PILA .)
    MENOS           reduce using rule 60 (variables -> PILA .)
    POR             reduce using rule 60 (variables -> PILA .)
    DIVICION        reduce using rule 60 (variables -> PILA .)
    RESIDUO         reduce using rule 60 (variables -> PILA .)
    AND1            reduce using rule 60 (variables -> PILA .)
    OR1             reduce using rule 60 (variables -> PILA .)
    XOR             reduce using rule 60 (variables -> PILA .)
    AND2            reduce using rule 60 (variables -> PILA .)
    OR2             reduce using rule 60 (variables -> PILA .)
    XOR2            reduce using rule 60 (variables -> PILA .)
    SHIFTI          reduce using rule 60 (variables -> PILA .)
    SHIFTD          reduce using rule 60 (variables -> PILA .)
    IGUALIGUAL      reduce using rule 60 (variables -> PILA .)
    DIFERENTE       reduce using rule 60 (variables -> PILA .)
    MAYORIGUAL      reduce using rule 60 (variables -> PILA .)
    MENORIGUAL      reduce using rule 60 (variables -> PILA .)
    MAYOR           reduce using rule 60 (variables -> PILA .)
    MENOR           reduce using rule 60 (variables -> PILA .)
    PUNTOCOMA       reduce using rule 60 (variables -> PILA .)
    PARENTC         reduce using rule 60 (variables -> PILA .)
    CORCHEC         reduce using rule 60 (variables -> PILA .)
    CORCHEA         shift and go to state 40

    indices                        shift and go to state 44
    indice                         shift and go to state 39

state 26

    (61) variables -> PUNTERO_PILA .
    (67) variables_array -> PUNTERO_PILA . indices
    (68) indices -> . indice indices_P
    (71) indice -> . CORCHEA val CORCHEC

    IGUAL           reduce using rule 61 (variables -> PUNTERO_PILA .)
    MAS             reduce using rule 61 (variables -> PUNTERO_PILA .)
    MENOS           reduce using rule 61 (variables -> PUNTERO_PILA .)
    POR             reduce using rule 61 (variables -> PUNTERO_PILA .)
    DIVICION        reduce using rule 61 (variables -> PUNTERO_PILA .)
    RESIDUO         reduce using rule 61 (variables -> PUNTERO_PILA .)
    AND1            reduce using rule 61 (variables -> PUNTERO_PILA .)
    OR1             reduce using rule 61 (variables -> PUNTERO_PILA .)
    XOR             reduce using rule 61 (variables -> PUNTERO_PILA .)
    AND2            reduce using rule 61 (variables -> PUNTERO_PILA .)
    OR2             reduce using rule 61 (variables -> PUNTERO_PILA .)
    XOR2            reduce using rule 61 (variables -> PUNTERO_PILA .)
    SHIFTI          reduce using rule 61 (variables -> PUNTERO_PILA .)
    SHIFTD          reduce using rule 61 (variables -> PUNTERO_PILA .)
    IGUALIGUAL      reduce using rule 61 (variables -> PUNTERO_PILA .)
    DIFERENTE       reduce using rule 61 (variables -> PUNTERO_PILA .)
    MAYORIGUAL      reduce using rule 61 (variables -> PUNTERO_PILA .)
    MENORIGUAL      reduce using rule 61 (variables -> PUNTERO_PILA .)
    MAYOR           reduce using rule 61 (variables -> PUNTERO_PILA .)
    MENOR           reduce using rule 61 (variables -> PUNTERO_PILA .)
    PUNTOCOMA       reduce using rule 61 (variables -> PUNTERO_PILA .)
    PARENTC         reduce using rule 61 (variables -> PUNTERO_PILA .)
    CORCHEC         reduce using rule 61 (variables -> PUNTERO_PILA .)
    CORCHEA         shift and go to state 40

    indices                        shift and go to state 45
    indice                         shift and go to state 39

state 27
